--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "express": "^4.17.1",
     "flash": "^1.1.0",
     "ip": "^1.1.5",
+    "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
     "moment": "^2.27.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "uuid": "^8.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
