--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
@@ -17,6 +18,7 @@
     "flash": "^1.1.0",
     "ip": "^1.1.5",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "jwt-simple": "^0.5.6",
     "moment": "^2.27.0",
     "mysql": "^2.18.1",
