--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "express-validator": "^6.6.0",
     "flash": "^1.1.0",
     "ip": "^1.1.5",
     "jsonwebtoken": "^8.5.1",
@@ -23,6 +24,7 @@
     "jwt-simple": "^0.5.6",
     "moment": "^2.27.0",
     "mysql": "^2.18.1",
+    "sanitizer": "^0.1.3",
     "uuid": "^8.2.0"
   },
   "devDependencies": {
