--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "flash": "^1.1.0",
+    "fs": "0.0.1-security",
     "ip": "^1.1.5",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "jwt-simple": "^0.5.6",
     "moment": "^2.27.0",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "uuid": "^8.2.0"
   },
